# ROS2 adapter (optional) — gated behind SPECTRA_USE_ROS2
# Requires a sourced ROS2 workspace (Humble+) before running CMake.
# Zero impact on any target when SPECTRA_USE_ROS2=OFF.
if(NOT SPECTRA_USE_ROS2)
    return()
endif()

find_package(ament_cmake QUIET)
if(NOT ament_cmake_FOUND)
    # Try to auto-source a system ROS2 installation before giving up.
    file(GLOB _spectra_ros_candidates /opt/ros/*)
    set(_spectra_ros_sourced FALSE)
    foreach(_spectra_ros_dir IN LISTS _spectra_ros_candidates)
        if(NOT _spectra_ros_sourced AND IS_DIRECTORY "${_spectra_ros_dir}")
            set(_spectra_ros_setup)
            # Always use setup.bash because we invoke the source step via
            # /bin/bash; the user's interactive shell is irrelevant here.
            if(EXISTS "${_spectra_ros_dir}/setup.bash")
                set(_spectra_ros_setup "${_spectra_ros_dir}/setup.bash")
            endif()
            if(_spectra_ros_setup)
                # Source the ROS setup script in a sub-shell and capture the
                # environment variables that CMake/ROS actually need. We
                # only extract a small allow-list of path-like variables, so
                # arbitrary shell values cannot break CMake parsing.
                execute_process(
                    COMMAND /bin/bash -c "
source \"${_spectra_ros_setup}\" >/dev/null 2>&1
if [ $? -eq 0 ]; then
    printf 'PATH=%s\\n' \"\$PATH\"
    printf 'LD_LIBRARY_PATH=%s\\n' \"\$LD_LIBRARY_PATH\"
    printf 'PYTHONPATH=%s\\n' \"\$PYTHONPATH\"
    printf 'CMAKE_PREFIX_PATH=%s\\n' \"\$CMAKE_PREFIX_PATH\"
    printf 'AMENT_PREFIX_PATH=%s\\n' \"\$AMENT_PREFIX_PATH\"
fi
"
                    OUTPUT_VARIABLE _spectra_ros_env
                    RESULT_VARIABLE _spectra_ros_result
                    OUTPUT_STRIP_TRAILING_WHITESPACE
                )
                if(_spectra_ros_result EQUAL 0 AND _spectra_ros_env)
                    string(REPLACE "\n" ";" _spectra_ros_env_lines "${_spectra_ros_env}")
                    set(_spectra_ros_env_file "${CMAKE_CURRENT_BINARY_DIR}/spectra_ros_env.cmake")
                    file(WRITE "${_spectra_ros_env_file}" "# Auto-generated by Spectra CMake; restores ROS2 environment on re-configure.\n")
                    foreach(_spectra_ros_line IN LISTS _spectra_ros_env_lines)
                        if(_spectra_ros_line MATCHES "^([A-Z_]+)=(.*)$")
                            set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
                            # Use a long bracket delimiter so path lists with
                            # parentheses, brackets or quotes cannot break the
                            # generated set() calls.
                            file(APPEND "${_spectra_ros_env_file}" "set(ENV{${CMAKE_MATCH_1}} [====================[${CMAKE_MATCH_2}]====================])\n")
                            if(CMAKE_MATCH_1 STREQUAL "LD_LIBRARY_PATH")
                                set(_spectra_ros_ld_library_path "${CMAKE_MATCH_2}")
                            endif()
                            if(CMAKE_MATCH_1 STREQUAL "AMENT_PREFIX_PATH")
                                set(_spectra_ros_ament_prefix_path "${CMAKE_MATCH_2}")
                            endif()
                        endif()
                    endforeach()
                    unset(ament_cmake_FOUND)
                    find_package(ament_cmake QUIET)
                    if(ament_cmake_FOUND)
                        message(STATUS "Sourced ${_spectra_ros_setup} for ROS2 support")
                        set(_spectra_ros_sourced TRUE)
                    endif()
                endif()
            endif()
        endif()
    endforeach()
    if(NOT ament_cmake_FOUND)
        message(STATUS "ament_cmake not found — disabling ROS2 adapter (SPECTRA_USE_ROS2=OFF)")
        set(SPECTRA_USE_ROS2 OFF CACHE BOOL "Enable ROS2 adapter (requires sourced ROS2 workspace)" FORCE)
    endif()
    unset(_spectra_ros_setup)
    unset(_spectra_ros_result)
    unset(_spectra_ros_env)
    unset(_spectra_ros_env_lines)
    unset(_spectra_ros_env_line)
    unset(_spectra_ros_candidates)
    unset(_spectra_ros_dir)
    unset(_spectra_ros_sourced)
    # _spectra_ros_ld_library_path and _spectra_ros_ament_prefix_path are
    # kept so the ROS executable wrappers can embed runtime search paths.
endif()

if(NOT SPECTRA_USE_ROS2)
    return()
endif()

find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
    pkg_check_modules(TINYXML2 QUIET tinyxml2)
endif()
if(NOT TARGET tinyxml2::tinyxml2)
    find_path(TINYXML2_INCLUDE_DIR tinyxml2.h HINTS ${TINYXML2_INCLUDE_DIRS})
    find_library(TINYXML2_LIBRARY NAMES tinyxml2 HINTS ${TINYXML2_LIBRARY_DIRS})

    if(TINYXML2_INCLUDE_DIR AND TINYXML2_LIBRARY)
        add_library(tinyxml2::tinyxml2 UNKNOWN IMPORTED)
        set_target_properties(tinyxml2::tinyxml2 PROPERTIES
            IMPORTED_LOCATION "${TINYXML2_LIBRARY}"
            INTERFACE_INCLUDE_DIRECTORIES "${TINYXML2_INCLUDE_DIR}"
        )
    endif()
endif()
if(NOT TARGET tinyxml2::tinyxml2)
    message(FATAL_ERROR
        "TinyXML2 not found. Install libtinyxml2-dev or make tinyxml2 discoverable via pkg-config/CMAKE_PREFIX_PATH."
    )
endif()
find_package(rclcpp REQUIRED)
# Humble message *::Targets genexes reference fastcdr; ensure the target exists
# before spectra_ros2_adapter propagates ${std_msgs_TARGETS} to tests/.
find_package(fastcdr QUIET)
find_package(fastrtps QUIET)
find_package(rcl_interfaces REQUIRED)
find_package(rosidl_typesupport_introspection_cpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(ament_index_cpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(diagnostic_msgs REQUIRED)
find_package(tf2_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(rcpputils QUIET)

set(SPECTRA_NLOHMANN_JSON_INCLUDE_DIR "")
if(EXISTS "${CMAKE_SOURCE_DIR}/third_party/nlohmann/json.hpp")
    set(SPECTRA_NLOHMANN_JSON_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/third_party")
    message(STATUS "Using bundled nlohmann/json from third_party/")
else()
    find_package(nlohmann_json CONFIG QUIET)
    if(nlohmann_json_FOUND)
        set(SPECTRA_NLOHMANN_JSON_INCLUDE_DIR "${nlohmann_json_INCLUDE_DIRS}")
    else()
        find_path(SPECTRA_NLOHMANN_JSON_INCLUDE_DIR nlohmann/json.hpp)
    endif()
endif()

if(NOT SPECTRA_NLOHMANN_JSON_INCLUDE_DIR)
    message(FATAL_ERROR
        "SPECTRA_USE_ROS2 requires nlohmann/json.hpp to build ros_session.cpp. "
        "Install nlohmann-json3-dev or ensure third_party/nlohmann/json.hpp exists.")
endif()

if(SPECTRA_ROS2_BAG)
    find_package(rosbag2_cpp REQUIRED)
    find_package(rosbag2_storage REQUIRED)

    include(CheckCXXSourceCompiles)
    set(CMAKE_REQUIRED_LIBRARIES rosbag2_storage::rosbag2_storage)
    check_cxx_source_compiles([=[
#include <rosbag2_storage/serialized_bag_message.hpp>
int main()
{
    rosbag2_storage::SerializedBagMessage msg;
    msg.recv_timestamp = 1;
    return static_cast<int>(msg.recv_timestamp);
}
]=] SPECTRA_ROSBAG2_HAS_RECV_TIMESTAMP)
    unset(CMAKE_REQUIRED_LIBRARIES)
endif()

# Adapter library — all ROS2 adapter source lives under src/adapters/ros2/
add_library(spectra_ros2_adapter
    ros2_adapter.cpp
    ros2_bridge.cpp
    topic_discovery.cpp
    message_introspector.cpp
    generic_subscriber.cpp
    ros_plot_manager.cpp
    ui/topic_list_panel.cpp
    ui/topic_echo_panel.cpp
    ui/topic_stats_overlay.cpp
    ui/field_drag_drop.cpp
    ui/node_graph_panel.cpp
    display/display_registry.cpp
    display/grid_display.cpp
    display/tf_display.cpp
    display/marker_display.cpp
    display/pointcloud_display.cpp
    display/laserscan_display.cpp
    display/image_display.cpp
    display/path_display.cpp
    display/pose_display.cpp
    display/robot_model_display.cpp
    display/occupancy_grid_display.cpp
    messages/image_adapter.cpp
    resources/ros_package_resolver.cpp
    tools/measure_tool.cpp
    scene/scene_manager.cpp
    scene/mesh_primitives.cpp
    scene/scene_renderer.cpp
    tf/tf_buffer.cpp
    urdf/urdf_parser.cpp
    ui/displays_panel.cpp
    ui/inspector_panel.cpp
    ui/scene_viewport.cpp
    ui/tf_tree_panel.cpp
    subplot_manager.cpp
    expression_engine.cpp
    expression_plot.cpp
    ui/expression_editor.cpp
    ros_csv_export.cpp
    ros_screenshot_export.cpp
    ros_clipboard_export.cpp
    ros_app_shell.cpp
    ros_app_shell_panel_wiring.cpp
    ros_app_shell_menus.cpp
    ros_app_shell_drop_targets.cpp
    ros_app_shell_bag_clock.cpp
    service_caller.cpp
    ui/service_caller_panel.cpp
    ui/bag_info_panel.cpp
    bag_player.cpp
    bag_field_spec.cpp
    bag_display_sync.cpp
    tools/ros_bag_analyze.cpp
    ui/bag_playback_panel.cpp
    ui/param_editor_panel.cpp
    ros_log_viewer.cpp
    ui/log_viewer_panel.cpp
    ros_session.cpp
    ui/diagnostics_panel.cpp
)

target_link_libraries(spectra_ros2_adapter PUBLIC
    spectra
    tinyxml2::tinyxml2
    rclcpp::rclcpp
    rosidl_typesupport_introspection_cpp::rosidl_typesupport_introspection_cpp
)

target_link_libraries(spectra_ros2_adapter PUBLIC
    ${std_msgs_TARGETS}
    ${geometry_msgs_TARGETS}
    ${nav_msgs_TARGETS}
    ${sensor_msgs_TARGETS}
    ${diagnostic_msgs_TARGETS}
    ${tf2_msgs_TARGETS}
    ${visualization_msgs_TARGETS}
    ament_index_cpp::ament_index_cpp
)

if(SPECTRA_ROS2_BAG)
    target_sources(spectra_ros2_adapter PRIVATE
        bag_reader.cpp
        bag_recorder.cpp
    )
    # bag_player.cpp is already in the library sources above;
    # SPECTRA_ROS2_BAG compile definition enables its full implementation.
    target_link_libraries(spectra_ros2_adapter PUBLIC
        rosbag2_cpp::rosbag2_cpp
        rosbag2_storage::rosbag2_storage
    )
    target_compile_definitions(spectra_ros2_adapter PUBLIC SPECTRA_ROS2_BAG)
    if(SPECTRA_ROSBAG2_HAS_RECV_TIMESTAMP)
        target_compile_definitions(spectra_ros2_adapter PUBLIC SPECTRA_ROSBAG2_RECV_TIMESTAMP=1)
    endif()
endif()

target_compile_features(spectra_ros2_adapter PRIVATE cxx_std_20)

target_include_directories(spectra_ros2_adapter PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_include_directories(spectra_ros2_adapter PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_BINARY_DIR}/generated
    ${CMAKE_SOURCE_DIR}/third_party/stb
    ${SPECTRA_NLOHMANN_JSON_INCLUDE_DIR}
)

target_compile_definitions(spectra_ros2_adapter PUBLIC SPECTRA_USE_ROS2)

# Forward ImGui include paths so topic_list_panel.cpp can find imgui.h
# when SPECTRA_USE_IMGUI is ON (inherited via spectra PUBLIC definition).
if(SPECTRA_USE_IMGUI AND (SPECTRA_USE_GLFW OR SPECTRA_USE_SDL3) AND DEFINED imgui_SOURCE_DIR)
    target_include_directories(spectra_ros2_adapter PRIVATE
        ${imgui_SOURCE_DIR}
        ${imgui_SOURCE_DIR}/backends
    )
endif()

# spectra-ros standalone executable
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
    add_executable(spectra-ros
        main.cpp
    )
    target_link_libraries(spectra-ros PRIVATE spectra_ros2_adapter)
    target_compile_features(spectra-ros PRIVATE cxx_std_20)
    target_include_directories(spectra-ros PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_BINARY_DIR}/generated
    )
    if(_spectra_ros_ld_library_path AND _spectra_ros_ament_prefix_path)
        set_target_properties(spectra-ros PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/.spectra-ros-real"
        )
        file(WRITE "${CMAKE_BINARY_DIR}/spectra-ros" "#!/bin/bash
# Auto-generated wrapper: sources the captured ROS2 environment and re-execs
# the real binary. Generated because ROS2 was auto-sourced at configure time.
export LD_LIBRARY_PATH=\"${_spectra_ros_ld_library_path}\${LD_LIBRARY_PATH:+:\$LD_LIBRARY_PATH}\"
export AMENT_PREFIX_PATH=\"${_spectra_ros_ament_prefix_path}\${AMENT_PREFIX_PATH:+:\$AMENT_PREFIX_PATH}\"
exec \"\$(dirname \"\$0\")/.spectra-ros-real/spectra-ros\" \"\$@\"
")
        file(CHMOD "${CMAKE_BINARY_DIR}/spectra-ros" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    else()
        set_target_properties(spectra-ros PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
        )
    endif()
endif()

if(SPECTRA_ROS2_BAG AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/tools/ros_bag_analyze_main.cpp)
    add_executable(spectra-ros-analyze
        tools/ros_bag_analyze_main.cpp
    )
    target_link_libraries(spectra-ros-analyze PRIVATE spectra_ros2_adapter)
    target_compile_features(spectra-ros-analyze PRIVATE cxx_std_20)
    target_include_directories(spectra-ros-analyze PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/src
    )
    if(_spectra_ros_ld_library_path AND _spectra_ros_ament_prefix_path)
        set_target_properties(spectra-ros-analyze PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/.spectra-ros-real"
        )
        file(WRITE "${CMAKE_BINARY_DIR}/spectra-ros-analyze" "#!/bin/bash
# Auto-generated wrapper: sources the captured ROS2 environment and re-execs
# the real binary. Generated because ROS2 was auto-sourced at configure time.
export LD_LIBRARY_PATH=\"${_spectra_ros_ld_library_path}\${LD_LIBRARY_PATH:+:\$LD_LIBRARY_PATH}\"
export AMENT_PREFIX_PATH=\"${_spectra_ros_ament_prefix_path}\${AMENT_PREFIX_PATH:+:\$AMENT_PREFIX_PATH}\"
exec \"\$(dirname \"\$0\")/.spectra-ros-real/spectra-ros-analyze\" \"\$@\"
")
        file(CHMOD "${CMAKE_BINARY_DIR}/spectra-ros-analyze" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
    else()
        set_target_properties(spectra-ros-analyze PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
        )
    endif()
    install(TARGETS spectra-ros-analyze RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()

if(SPECTRA_ROS2_BAG)
    if(SPECTRA_ROSBAG2_HAS_RECV_TIMESTAMP)
        set(_spectra_rosbag2_ts_api "recv_timestamp/send_timestamp (Jazzy+)")
    else()
        set(_spectra_rosbag2_ts_api "time_stamp (Humble)")
    endif()
    message(STATUS "ROS2 adapter enabled (rosbag2: ON, timestamp API: ${_spectra_rosbag2_ts_api})")
else()
    message(STATUS "ROS2 adapter enabled (rosbag2: OFF)")
endif()

# ROS2 adapter deployment (only when built with SPECTRA_USE_ROS2=ON)
install(TARGETS spectra_ros2_adapter
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
if(TARGET spectra-ros)
    install(TARGETS spectra-ros RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
    if(EXISTS ${CMAKE_SOURCE_DIR}/sessions/presets)
        install(DIRECTORY ${CMAKE_SOURCE_DIR}/sessions/presets/
            DESTINATION ${CMAKE_INSTALL_DATADIR}/spectra/ros/sessions/presets
            FILES_MATCHING PATTERN "*.spectra-ros-session"
        )
    endif()
    if(EXISTS ${CMAKE_SOURCE_DIR}/examples/ros2_launch)
        install(DIRECTORY ${CMAKE_SOURCE_DIR}/examples/ros2_launch/
            DESTINATION ${CMAKE_INSTALL_DATADIR}/spectra/ros/launch
            FILES_MATCHING PATTERN "*.launch.py"
        )
    endif()
endif()
